--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ChecklistApp</string>
     <string name="add_field">add Field</string>
+    <string name="add_fieldbtn">Add Field</string>
 </resources>
